--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="manifest" href="/site.webmanifest" />
 
-		<title>twinme - Call</title>
+		<title>%VITE_APP_NAME% - Call</title>
 	</head>
 	<body class="w-full bg-black">
 		<div id="root" class="w-full"></div>
