--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 		<title>%VITE_APP_NAME% - Call</title>
 	</head>
-	<body class="w-full bg-black">
-		<div id="root" class="w-full"></div>
+	<body class="h-full w-full bg-black text-white">
+		<div id="root" class="h-full w-full"></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
