--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="w-full" style="background-color: black">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
 		<link rel="manifest" href="/site.webmanifest" />
 
 		<title>%VITE_APP_NAME% - Call</title>
